--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,9 +109,10 @@
     </div> <!-- /container -->
 <%}%>
 <script type="text/template" id="moban">
-    <div class="col-md-6">
+    <div class="col-sm-3">
         <h2><img src="/avatar/{{=avatar}}" alt="" class="img-circle yemiantouxiang" ></h2>
-        <p>作者：{{=username}}  发表时间：{{=datetime}}</p>
+        <p>作者：{{=username}}</p>
+        <p>发表时间：{{=datetime}}</p>
         <p>{{=content}}</p>
         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
     </div>
@@ -126,33 +127,30 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/underscore_conflict.js"></script>
 <script>
-
-
-    $.get("/getshuoshuoamount",function (result) {
-
-        //每页多少条内容就除多少，两页就是4，
-        var pageamount = Math.ceil(parseInt(result) / 4);
-        var compiled = _.template($("#moban_fenye").html());
-        for(var i = 0; i < pageamount; i++){
-
-            var htmlString = compiled({"page":i});
-            $(".pagination").append($(htmlString));
-            if(i == 0){
-                //给第一条按钮高亮显示
-                $(".pagination li").addClass("active");
+    if ("<%= login %>" == "true") {
+        $.get("/getshuoshuoamount", function (result) {
+            //每页多少条内容就除多少，两页就是4，
+            var pageamount = Math.ceil(parseInt(result) / 4);
+            var compiled = _.template($("#moban_fenye").html());
+            for (var i = 0; i < pageamount; i++) {
+                var htmlString = compiled({"page": i});
+                $(".pagination").append($(htmlString));
+                if (i == 0) {
+                    //给第一条按钮高亮显示,先动态加载，再加class active
+                    $(".pagination li").addClass("active");
+                }
             }
-        }
-        $(".pagination li").click(function(){
-            console.log($(this).index());
-            getPage($(this).index());
-            //点选的按钮高亮显示，去除其它按钮高亮显示
-            $(this).addClass("active").siblings().removeClass("active");
-        })
-    });
+            $(".pagination li").click(function () {
+                console.log($(this).index());
+                getPage($(this).index());
+                //点选的按钮高亮显示，去除其它按钮高亮显示
+                $(this).addClass("active").siblings().removeClass("active");
+            })
+        });
+    }
 
     getPage(0);
     function getPage(page) {
-
         $("#allshuoshuo").html("");
         var compiled = _.template($("#moban").html());
         if ("<%= login %>" == "true") {
